# trunk

./: hdenv  pom.xml
modules/df-engine/: pom.xml
modules/flow-engine/source/flowengine/: .classpath  .project  pom.xml
modules/ml-engine/: README.rst  pom.xml
modules/ml-engine/master/: CMakeLists.txt
modules/ml-engine/master/src/frame/: DynamicSingleton.h  Event.h  EventManager.cpp  EventManager.h  EventManagerConst.h  Job.cpp  Job.h  Log.h  Module.cpp  Module.h  Pipe.cpp  Pipe.h  Task.h  Worker.cpp  Worker.h  WorkerThreadPool.cpp  WorkerThreadPool.h
modules/ml-engine/master/src/managers/: InputDataManager.cpp  InputDataManager.h  JobManager.cpp  JobManager.h  ModelManager.cpp  ModelManager.h  ResourceManager.cpp  ResourceManager.h  SampleManager.cpp  SampleManager.h  SampleManager2.cpp  SampleManager2.h
modules/ml-engine/master/src/models/: BaseAlgorithm.cpp  BaseAlgorithm.h  ClusterConfiguration.cpp  ClusterConfiguration.h  DnnRegression.cpp  DnnRegression.h  InputData.cpp  InputData.h  LinearRegression.cpp  LinearRegression.h  MetaData.h  Model.h  ResourceInfo.h  Script.cpp  Script.h  TrainingProcess.h
modules/ml-engine/master/src/tasks/: CustomTask.cpp  CustomTask.h  ModelSaveTask.cpp  ModelSaveTask.h  TrainingStartTask.cpp  TrainingStartTask.h  TrainingStopTask.cpp  TrainingStopTask.h
modules/ml-engine/master/src/tests/: json_test.cpp  main.cpp  manager_test_main.cpp  memory_test.cpp  race_test.cpp  task_test_main.cpp
modules/ml-engine/master/src/utils/: NetworkUtil.cpp  NetworkUtil.h  ScriptBuilder.cpp  ScriptBuilder.h  jsoncpp.cpp
modules/ml-engine/test/: CMakeLists.txt
modules/ml-engine/test/src/: main.cpp
modules/ml-engine/test/src/flowengine/: FlowEngine.cpp  FlowEngine.h
modules/ml-engine/tools/cmake-3.11.3/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
modules/ml-engine/tools/cmake-3.11.3/Auxiliary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules/ml-engine/tools/cmake-3.11.3/Auxiliary/bash-completion/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules/ml-engine/tools/cmake-3.11.3/Bootstrap.cmk/: InitialCacheFlags.cmake  Makefile  cmConfigure.h
modules/ml-engine/tools/cmake-3.11.3/Bootstrap.cmk/cmsys/: Configure.h  Configure.hxx
modules/ml-engine/tools/cmake-3.11.3/Source/: CTestTestfile.cmake  Makefile  cmConfigure.h  cmake_install.cmake
modules/ml-engine/tools/cmake-3.11.3/Source/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmsysTestProcess  cmsysTestSharedForward  cmsysTestsC  cmsysTestsCxx  testSharedForward.c  testSystemTools.h
modules/ml-engine/tools/cmake-3.11.3/Testing/CoberturaCoverage/: DartConfiguration.tcl  coverage.xml
modules/ml-engine/tools/cmake-3.11.3/Testing/DelphiCoverage/: DartConfiguration.tcl
modules/ml-engine/tools/cmake-3.11.3/Testing/JacocoCoverage/: DartConfiguration.tcl
modules/ml-engine/tools/cmake-3.11.3/Tests/: CMakeBuildDoubleProjectTest.cmake  CMakeBuildTest.cmake  CTestTestfile.cmake  CTestUpdateGIT.cmake  CTestUpdateSVN.cmake  EnforceConfig.cmake  Makefile  cmake_install.cmake
modules/ml-engine/tools/cmake-3.11.3/Utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
modules/ml-engine/worker/: CMakeLists.txt  job.py  test.py
modules/ml-engine/worker/src/controllers/: Client.cpp  Client.h  ClientConst.h  ProcessManager.cpp  ProcessManager.h
modules/ml-engine/worker/src/tests/: ipaddr_test.cpp  main.cpp
modules/web-server/: pom.xml
modules/web-server/modules/common/: pom.xml
modules/web-server/modules/servicegroup/ui-service/: pom.xml
modules/web-server/scripts/: create_meta.sql  create_user.sql  drop_meta.sql  redeploy.sh
scripts/: make-ml-engine.sh  make-ml-engnine.sh
(+337 files in other folders)
